# airbyte

airbyte-cdk/java/airbyte-cdk/: README.md
airbyte-cdk/java/airbyte-cdk/core/src/testFixtures/java/io/airbyte/cdk/testutils/: TestDatabase.java
airbyte-cdk/java/airbyte-cdk/db-sources/src/testFixtures/java/io/airbyte/cdk/integrations/debezium/: CdcSourceTest.java
airbyte-cdk/java/airbyte-cdk/dependencies/src/main/resources/: log4j2-test.xml
airbyte-cdk/python/airbyte_cdk/sources/streams/http/requests_native_auth/: abstract_token.py
airbyte-ci/connectors/connector_ops/: pyproject.toml
airbyte-ci/connectors/connectors_qa/: README.md  pyproject.toml
airbyte-ci/connectors/connectors_qa/connectors_qa/: __init__.py  checks.py  cli.py  consts.py  models.py  utils.py
airbyte-ci/connectors/connectors_qa/connectors_qa/templates/: connectors_qa.md.j2
airbyte-ci/connectors/pipelines/pipelines/: consts.py
airbyte-ci/connectors/pipelines/pipelines/airbyte_ci/connectors/test/: pipeline.py
airbyte-ci/connectors/pipelines/pipelines/airbyte_ci/connectors/test/steps/: common.py
airbyte-integrations/connectors/source-google-sheets/: pyproject.toml
airbyte-integrations/connectors/source-mssql/src/testFixtures/java/io/airbyte/integrations/source/mssql/: MsSQLTestDatabase.java
airbyte-integrations/connectors/source-s3/: metadata.yaml  setup.py
airbyte-integrations/connectors/source-zoom/: Dockerfile  setup.py
airbyte-integrations/connectors/source-zoom/source_zoom/schemas/: meetings_list_tmp.json  webinars_list_tmp.json
docs/integrations/sources/: s3.md
