[tool.poetry]
name = "connectors-qa"
version = "0.1.0"
description = ""
authors = ["Airbyte <contact@airbyte.io>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
airbyte-connectors-base-images = {path = "../base_images", develop = false}
connector-ops = {path = "../connector_ops", develop = false}
metadata-service = {path = "../metadata_service/lib", develop = false}
click = "^8.1.7"
pydash = "^6.0.2"
jinja2 = "^3.1.3"
toml = "^0.10.2"

[tool.poetry.scripts]
connectors-qa = "connectors_qa.cli:connectors_qa"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
